Corrected Spacing on AddFriendSquares

--- a/client/src/styles/AddFriendSquare.module.css
+++ b/client/src/styles/AddFriendSquare.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  margin: auto 20px;
+  margin: 15px 20px;
   border-radius: 20px;
   box-shadow: 0px 10px 5px var(--black-haze-shadow);
 }
